# Gyaanchand_ai

./: .replit  README.md  ai_core.py  app.py  gyaanchand.db  memory.db  models.py  package-lock.json  package.json  pyproject.toml  routes.py  vercel.json
chroma_storage/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
server/: index.js
static/css/: custom.css
static/js/: chat.js
templates/: base.html  chat.html  index.html
utils/: code_generator.py  memory_manager.py
